# dataExplorer

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
src/: App.jsx  App.tsx  Layout.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dataframe/: dto.rs  mod.rs
src-tauri/src/s3/: domain.rs  mod.rs  s3_commands.rs
src-tauri/src/state/: data_explorer_state.rs  mod.rs
src/bindings/: commands.ts
src/local/: explore_local_files.tsx  local_explorer.tsx
src/s3/: s3_endpoints.tsx  s3_explorer.tsx  s3_files_explorer.tsx
